Fix overflow issue when veiwing images on smaller devices

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -35,8 +35,9 @@
 
   img {
     border-radius: 6px;
-    width: 100%;
     aspect-ratio: 2/1;
+    max-width: 100%;
+    height: auto;
     object-fit: cover;
   }
   
